--- a/css/style.scss
+++ b/css/style.scss
@@ -158,43 +158,15 @@ footer a {
   text-decoration: none;
 }
 
-.modal {
-  display: none;
+.about-background {
+  background: $light-salmon;
 }
 
-.modal-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffddc0;
-  z-index: 20;
-}
-
-.modal-close {
-  font-family: sans-serif;
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  padding: 20px 25px 20px 25px;
-  z-index: 30;
-  cursor: pointer;
-  color: white;
-  font-size: 18px;
-}
-
-.modal-content {
-  padding: 50px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 30;
-  max-width: 400px;
-  background: transparent;
+.about-content {
+  width: 400px;
   text-align: center;
-  color: #ffa37e;
+  padding: 50px;
+  color: $dark-salmon;
 }
 
 /* Colors */
