--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,3 @@
-
 @import "../node_modules/normalize.css/normalize.css";
 
 // Colours:
@@ -33,7 +32,6 @@
 // $earth: #9b6e3f;
 // $light-blue: #91bbd9;
 // $dark-blue: #1a3c6c;
-
 
 $light-sea: #d8f9f8;
 $sea: #36968d;
@@ -84,414 +82,374 @@ $dirt-dusk: #cc9c3f;
 $pink-dust: #e3afa9;
 $dust-pink: #c6701f;
 
-
-
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 16px;
-    line-height: 1.5;
-    background-color: #ffffff;
-    color: #333333;
-    margin: 40px auto 40px auto;
-  }
-
- 
-  h1 {
-    font-size: 40px;
-    font-weight: 700;
-  }
-  
-  h2 {
-    font-size: 22px;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  header {
-    box-sizing: border-box;
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    top: 0;
-    left:0;
-    width: 100%;
-    padding: 20px;
-    z-index: 999;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  line-height: 1.5;
+  background-color: #ffffff;
+  color: #333333;
+  margin: 40px auto 40px auto;
 }
 
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+}
 
-  nav img {
+h2 {
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+header {
+  box-sizing: border-box;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  z-index: 999;
+}
+
+nav img {
   width: 50px;
-  }
-  
+}
 
-  .logo {
+.logo {
+  img {
+    width: 250px;
+    display: inline-block;
+  }
+  h1 {
+    display: inline-block;
+  }
+}
 
-    img {
-      width: 250px;
-      display:inline-block;
-    }
-    h1 {
-      display:inline-block;
-    }
-  }
+.intro {
+  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 200px;
+}
 
-  
-  .intro {
-    text-align: center;
-    margin-bottom: 40px;
-    margin-top: 200px;
-  }
-  
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-evenly;
+}
 
-  .cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content:space-evenly;
-  }
-  
-  .card-base {
-    width: 200px;
-    height: 250px;
-    padding: 20px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 0px 0px 51px 0px rgba(0, 0, 0, 0.20), 0px 6px 18px 0px rgba(0, 0, 0, 0.05);
-    transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
-    transform: translateY(0px);
-  }
+.card-base {
+  width: 200px;
+  height: 250px;
+  padding: 20px;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0px 0px 51px 0px rgba(0, 0, 0, 0.2),
+    0px 6px 18px 0px rgba(0, 0, 0, 0.05);
+  transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
+  transform: translateY(0px);
+}
 
-  .front {
-    position: relative;
-    margin: 15px;
-    cursor: pointer;
-  }
-  
-  .back {
+.front {
+  position: relative;
+  margin: 15px;
+  cursor: pointer;
+}
+
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 2;
+  p {
+    bottom: 30px;
     position: absolute;
-    top:0;
-    left:0;
-    opacity: 0;
-    z-index: 2;
-    p {
-      bottom: 30px;
-      position: absolute;
-      right: 30px;
-      left: initial;
-      text-align: right; 
-    }
+    right: 30px;
+    left: initial;
+    text-align: right;
   }
+}
 
-  .front:hover {
-    box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.20), 0px 30px 25px 0px rgba(0, 0, 0, 0.05);
-    transform: translateY(-5px);
-  }
-  
-  .front:hover .back {
-    opacity: 1;
-  }
+.front:hover {
+  box-shadow: 0px 0px 114px 0px rgba(0, 0, 0, 0.2),
+    0px 30px 25px 0px rgba(0, 0, 0, 0.05);
+  transform: translateY(-5px);
+}
 
-  .about a {
-    color: lightpink;
-    text-decoration: none;
-  }
+.front:hover .back {
+  opacity: 1;
+}
 
-  footer {
-    text-align: center;
-    color: #dedede;
-    padding-top: 50px;
-    font-size: 14px;
-  }
-  
-  footer a {
-    color: lightpink;
-    text-decoration: none;
-  }
-  
-  .modal {
-    display: none;
-  }
-  
-  .modal-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #FFDDC0;
-    z-index: 20;
-  }
-  
-  .modal-close {
-    font-family: sans-serif;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    padding: 20px 25px 20px 25px;
-    z-index: 30;
-    cursor: pointer;
-    color: white;
-    font-size: 18px;
-  }
-  
-  .modal-content {
-    padding: 50px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 30;
-    max-width: 400px;
-    background: transparent;
-    text-align: center;
-    color: #FFA37E;
-  }
-  
+.about a {
+  color: lightpink;
+  text-decoration: none;
+}
 
+footer {
+  text-align: center;
+  color: #dedede;
+  padding-top: 50px;
+  font-size: 14px;
+}
 
+footer a {
+  color: lightpink;
+  text-decoration: none;
+}
 
-  
-  
-  /* Colors */
-  
-  .front-1 {
-    background-color: $light-sea;
-    color: $sea;
-    .back {
-      color: $light-sea;
-      background-color: $sea;
-    }
-  }
+.about-background {
+  background: #ffddc0;
+}
 
-  .front-2 {
-    background-color:$dark-salmon;
-    color: $salmon-green;
-    .back {
-      color:   $dark-salmon;
-      background-color: $salmon-green;
-    }
-  }
+.about-content {
+  margin-top: 100px;
+  padding: 50px;
+  max-width: 400px;
+  color: #ffa37e;
+}
 
-  .front-3 {
-    background-color:$pink-beige;
-    color: $light-beige;
-    .back {
-      color:$pink-beige;
-      background-color: $light-beige;
-    }
-  }
+/* Colors */
 
+.front-1 {
+  background-color: $light-sea;
+  color: $sea;
+  .back {
+    color: $light-sea;
+    background-color: $sea;
+  }
+}
 
-  .front-4 {
-    background-color: $light-sage;
-    color: $dark-sage;
-    .back {
-      color: $light-sage;
-      background-color: $dark-sage;
-    }
+.front-2 {
+  background-color: $dark-salmon;
+  color: $salmon-green;
+  .back {
+    color: $dark-salmon;
+    background-color: $salmon-green;
   }
+}
 
-  .front-5 {
-    background-color: $marigold-salmon;
-    color: $salmon-marigold;
-    .back {
-      color: $marigold-salmon;
-      background-color: $salmon-marigold;
-    }
+.front-3 {
+  background-color: $pink-beige;
+  color: $light-beige;
+  .back {
+    color: $pink-beige;
+    background-color: $light-beige;
   }
+}
 
-  .front-6 {
-    background-color: $kahki-sand;
-    color: $sand-sky-kahki;
-    .back {
-      color: $kahki-sand;
-      background-color: $sand-sky-kahki;
-    }
+.front-4 {
+  background-color: $light-sage;
+  color: $dark-sage;
+  .back {
+    color: $light-sage;
+    background-color: $dark-sage;
   }
-  .front-7 {
-    background-color: $blush;
-    color: $dark;
-    .back {
-      color: $blush;
-      background-color: $dark;
-    }
-  }
-  .front-8 {
-    background-color: $sky-sand-grey;
-    color: $sand-sky-kahki;
-    .back {
-      color: $sky-sand-grey;
-      background-color: $sand-sky-kahki;
-    }
-  }
+}
 
+.front-5 {
+  background-color: $marigold-salmon;
+  color: $salmon-marigold;
+  .back {
+    color: $marigold-salmon;
+    background-color: $salmon-marigold;
+  }
+}
 
-  .front-9 {
-    background-color:$green-salmon;
-    color: $salmon-green;
-    .back {
-      color:$green-salmon;
-      background-color: $salmon-green;
-    }
+.front-6 {
+  background-color: $kahki-sand;
+  color: $sand-sky-kahki;
+  .back {
+    color: $kahki-sand;
+    background-color: $sand-sky-kahki;
   }
-  .front-10 {
-    background-color: $grey-sky;
-    color: $dusk-dirt;
-    .back {
-      color: $grey-sky;
-      background-color: $dusk-dirt;
-    }
+}
+.front-7 {
+  background-color: $blush;
+  color: $dark;
+  .back {
+    color: $blush;
+    background-color: $dark;
   }
-  .front-11 {
-    background-color: $maize;
-    color: $light-maize;
-    .back {
-      color: $maize;
-      background-color: $light-maize;
-    }
+}
+.front-8 {
+  background-color: $sky-sand-grey;
+  color: $sand-sky-kahki;
+  .back {
+    color: $sky-sand-grey;
+    background-color: $sand-sky-kahki;
   }
-  .front-12 {
-    background-color: $navy-beige;
-    color: $beige-navy;
-    .back {
-      color: $navy-beige;
-      background-color: $beige-navy;
-    }
-  }
+}
 
-  .front-13 {
-    background-color: $lilac-violet;
-    color: $violet-lilac;
-    .back {
-      color: $lilac-violet;
-      background-color: $violet-lilac;
-    }
+.front-9 {
+  background-color: $green-salmon;
+  color: $salmon-green;
+  .back {
+    color: $green-salmon;
+    background-color: $salmon-green;
   }
-  .front-14 {
-    background-color: $rouge-rose;
-    color: $rose-rouge;
-    .back {
-      color: $rouge-rose;
-      background-color: $rose-rouge;
-    }
-  }
-
-
-  .front-15 {
-    background-color:$pink-steel;
-    color: $steel-pink;
-    .back {
-      color:$pink-steel;
-      background-color: $steel-pink;
-    }
-  }
-  .front-16 {
-    background-color: $baby-blue;
-    color: $baby-pink;
-    .back {
-      color: $baby-blue;
-      background-color: $baby-pink;
-    }
-  }
-
-  .front-17 {
-    background-color: $slate-mauve;
-    color: $mauve-slate;
-    .back {
-      color: $slate-mauve;
-      background-color: $mauve-slate;
-    }
-  }
-  .front-18 {
-    background-color: $peach-sand;
-    color: $sand-peach;
-    .back {
-      color: $peach-sand;
-      background-color: $sand-peach;
-    }
-  }
-  .front-19 {
-    background-color: $cobalt-silver;
-    color: $silver-cobolt;
-    .back {
-      color: $cobalt-silver;
-      background-color: $silver-cobolt;
-    }
-  }
-  .front-20 {
-    background-color: $marigold-salmon;
-    color: $ice-marigold;
-    .back {
-      color: $marigold-salmon;
-      background-color: $ice-marigold;
-    }
-  }
-  .front-21 {
-    background-color: $green-grey;
-    color: $grey-green;
-    .back {
-      color: $green-grey;
-      background-color: $grey-green;
-    }
-  }
-  .front-22 {
-    background-color: $sand-wine;
-    color: $wine-sand;
-    .back {
-      color: $sand-wine;
-      background-color: $wine-sand;
-    }
-  }
-  .front-23 {
-    background-color: $green-blue;
-    color: $blue-green;
-    .back {
-      color: $green-blue;
-      background-color: $blue-green;
-    }
-  }
-  .front-24 {
-    background-color: $baby-rose;
-    color: $rose-baby;
-    .back {
-      color: $baby-rose;
-      background-color: $rose-baby;
-    }
-  }
-  .front-25 {
+}
+.front-10 {
+  background-color: $grey-sky;
+  color: $dusk-dirt;
+  .back {
+    color: $grey-sky;
     background-color: $dusk-dirt;
-    color: $dirt-dusk;
-    .back {
-      color: $dusk-dirt;
-      background-color: $dirt-dusk;
-    }
   }
-  .front-26 {
-    background-color: $pink-dust;
-    color: $dust-pink;
-    .back {
-      color: $pink-dust;
-      background-color: $dust-pink;
-    }
+}
+.front-11 {
+  background-color: $maize;
+  color: $light-maize;
+  .back {
+    color: $maize;
+    background-color: $light-maize;
   }
-  .front-27 {
-    background-color: $marigold-salmon;
-    color: $ice-marigold;
-    .back {
-      color: $marigold-salmon;
-      background-color: $ice-marigold;
-    }
+}
+.front-12 {
+  background-color: $navy-beige;
+  color: $beige-navy;
+  .back {
+    color: $navy-beige;
+    background-color: $beige-navy;
   }
-  .front-28 {
-    background-color: $marigold-salmon;
-    color: $ice-marigold;
-    .back {
-      color: $marigold-salmon;
-      background-color: $ice-marigold;
-    }
+}
+
+.front-13 {
+  background-color: $lilac-violet;
+  color: $violet-lilac;
+  .back {
+    color: $lilac-violet;
+    background-color: $violet-lilac;
   }
+}
+.front-14 {
+  background-color: $rouge-rose;
+  color: $rose-rouge;
+  .back {
+    color: $rouge-rose;
+    background-color: $rose-rouge;
+  }
+}
+
+.front-15 {
+  background-color: $pink-steel;
+  color: $steel-pink;
+  .back {
+    color: $pink-steel;
+    background-color: $steel-pink;
+  }
+}
+.front-16 {
+  background-color: $baby-blue;
+  color: $baby-pink;
+  .back {
+    color: $baby-blue;
+    background-color: $baby-pink;
+  }
+}
+
+.front-17 {
+  background-color: $slate-mauve;
+  color: $mauve-slate;
+  .back {
+    color: $slate-mauve;
+    background-color: $mauve-slate;
+  }
+}
+.front-18 {
+  background-color: $peach-sand;
+  color: $sand-peach;
+  .back {
+    color: $peach-sand;
+    background-color: $sand-peach;
+  }
+}
+.front-19 {
+  background-color: $cobalt-silver;
+  color: $silver-cobolt;
+  .back {
+    color: $cobalt-silver;
+    background-color: $silver-cobolt;
+  }
+}
+.front-20 {
+  background-color: $marigold-salmon;
+  color: $ice-marigold;
+  .back {
+    color: $marigold-salmon;
+    background-color: $ice-marigold;
+  }
+}
+.front-21 {
+  background-color: $green-grey;
+  color: $grey-green;
+  .back {
+    color: $green-grey;
+    background-color: $grey-green;
+  }
+}
+.front-22 {
+  background-color: $sand-wine;
+  color: $wine-sand;
+  .back {
+    color: $sand-wine;
+    background-color: $wine-sand;
+  }
+}
+.front-23 {
+  background-color: $green-blue;
+  color: $blue-green;
+  .back {
+    color: $green-blue;
+    background-color: $blue-green;
+  }
+}
+.front-24 {
+  background-color: $baby-rose;
+  color: $rose-baby;
+  .back {
+    color: $baby-rose;
+    background-color: $rose-baby;
+  }
+}
+.front-25 {
+  background-color: $dusk-dirt;
+  color: $dirt-dusk;
+  .back {
+    color: $dusk-dirt;
+    background-color: $dirt-dusk;
+  }
+}
+.front-26 {
+  background-color: $pink-dust;
+  color: $dust-pink;
+  .back {
+    color: $pink-dust;
+    background-color: $dust-pink;
+  }
+}
+.front-27 {
+  background-color: $marigold-salmon;
+  color: $ice-marigold;
+  .back {
+    color: $marigold-salmon;
+    background-color: $ice-marigold;
+  }
+}
+.front-28 {
+  background-color: $marigold-salmon;
+  color: $ice-marigold;
+  .back {
+    color: $marigold-salmon;
+    background-color: $ice-marigold;
+  }
+}
